--- a/index.html
+++ b/index.html
@@ -7,17 +7,21 @@
     <title>Beary Bubbles</title>
     <link rel="stylesheet" href="styles.css">
     <script src="scripts.js"></script>
+    <link rel="stylesheet" media="screen" href="https://fontlibrary.org//face/jellee-typeface" type="text/css"/>
 </head>
 <body>
 
     <div class="logo-container">
-        <h2>Beary Bubbles</h2>
+        <h2>beary bubbles</h2>
         <img src="/images/5-01-removebg-preview.png" alt="Beary Bubbles">
-        <div>sign up for free rewards and boba!</div>
+        <div class="sign-up">sign up for free rewards and boba!</div>
         <div class="credit">
-            <a href="https://www.freepik.com/free-vector/cute-bear-boba-milk-tea-with-bee-cartoon-icon-illustration-animal-drink-icon-concept-isolated-flat-cartoon-style_11946799.htm#page=3&query=boba&position=4&from_view=search&track=robertav1_2_sidr">Image by catalyststuff on Freepik</a>
+            <a class="credit" href="https://www.freepik.com/free-vector/cute-bear-boba-milk-tea-with-bee-cartoon-icon-illustration-animal-drink-icon-concept-isolated-flat-cartoon-style_11946799.htm#page=3&query=boba&position=4&from_view=search&track=robertav1_2_sidr">Image by catalyststuff on Freepik</a>
         </div>
     </div>
-    
+
+    <div class="right-container">
+        <h1> get started now</h1>
+    </div>
 </body>
 </html>
