Add minlength(9) to phoneNumber input

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Beary Bubbles</title>
     <link rel="stylesheet" href="styles.css">
-    <script src="scripts.js"></script>
+    <script src="scripts.js" defer></script>
     <link rel="stylesheet" media="screen" href="https://fontlibrary.org//face/jellee-typeface" type="text/css"/>
 </head>
 <body>
@@ -44,7 +44,7 @@
 
                 <p>
                     <label for="phoneNumber">PHONE NUMBER</label>
-                    <input type="tel" name="userPhoneNumber" id="phoneNumber" placeholder="PHONE" required>
+                    <input type="tel" name="userPhoneNumber" id="phoneNumber" placeholder="PHONE" required minlength="9">
                 </p>
             </div>
 
