Add password match function to javascript

--- a/index.html
+++ b/index.html
@@ -52,18 +52,20 @@
                 <p>
                     <label for="password">PASSWORD</label>
                     <input type="password" name="userPassword" id="password" placeholder="PASSWORD" required minlength="6">
+                    <span class=""></span>
                 </p>
 
                 <p>
                     <label for="confirmPassword">CONFIRM PASSWORD</label>
                     <input type="password" name="userPassword" id="confirmPassword" placeholder="CONFIRM PASSWORD" required minlength="6">
+                    <span class=""></span>
                 </p>
             </div>
 
         </div>
 
         <div>
-            <button class="submitButton">create account</button>
+            <button class="submitButton" id="createButton">create account</button>
         </div>
 
         <div class="create-account">
