--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <img src="/images/5-01-removebg-preview.png" alt="Beary Bubbles">
         <div class="sign-up">sign up for free rewards and boba!</div>
         <div class="credit">
-            <a class="credit" href="https://www.freepik.com/free-vector/cute-bear-boba-milk-tea-with-bee-cartoon-icon-illustration-animal-drink-icon-concept-isolated-flat-cartoon-style_11946799.htm#page=3&query=boba&position=4&from_view=search&track=robertav1_2_sidr">Image by catalyststuff on Freepik</a>
+            <a target="_blank" rel="noopener noreferrer" class="credit" href="https://www.freepik.com/free-vector/cute-bear-boba-milk-tea-with-bee-cartoon-icon-illustration-animal-drink-icon-concept-isolated-flat-cartoon-style_11946799.htm#page=3&query=boba&position=4&from_view=search&track=robertav1_2_sidr">Image by catalyststuff on Freepik</a>
         </div>
     </div>
 
